Implement rule statistics, management endpoints and prepare service for production